Move StageDefinition out of Submission